# CoopData

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .trivyignore  CLAUDE.md  Dockerfile  README.md  agentic-config.conf  docker-compose.yml  start.sh
backend/: .dockerignore  .env.development  .env.example  .gitignore  Cargo.toml  Dockerfile  audit.toml  openapi.json  rustfmt.toml
backend/migrations/: 01_initial.sql
backend/src/: config.rs  database.rs  error.rs  lib.rs  main.rs  utils.rs
backend/src/api/: middleware.rs  mod.rs  openapi.rs  swagger_html.rs
backend/src/api/dto/: apex.rs  common.rs  cooperative.rs  federation.rs  invitation.rs  member.rs  mod.rs  organization.rs  user.rs
backend/src/api/handlers/: apex.rs  cooperative.rs  federation.rs  health.rs  me.rs  mod.rs  organizations.rs  users.rs
backend/src/api/routes/: apex.rs  api.rs  cooperative.rs  federation.rs  ministry.rs  mod.rs  shared.rs  users.rs
backend/src/auth/: claims.rs  jwt_validator.rs  middleware.rs  mod.rs  rbac.rs
backend/src/entities/: assessment.rs  mod.rs  organization.rs  user.rs
backend/src/models/: keycloak.rs  mod.rs
backend/src/repositories/: assessment.rs  mod.rs  organization.rs  user.rs
backend/src/services/: cache.rs  keycloak.rs  mod.rs
backend/tests/: handlers_cooperative.rs  handlers_users.rs
backend/tests/common/: mock.rs  mod.rs
docs/: BACKEND_DESIGN.md  RBAC_AND_AUTH_SYSTEM.md  apex-cooperative-architecture.md  apex-cooperative-testing-guide.md  design.md  federation-iam-testing-guide.md  implementation-federation-iam-sprint1.md  issues encountered .md  progress.md  solution.md  ticket-2-ministry-implementation.md
frontend/: .dockerignore  .env.example  .prettierignore  Dockerfile  entry.mjs  eslint.config.js  index.html  (+6 more)
(+170 files in other folders)
