[package]
name = "coop-data-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "CoopData Backend - Eswatini National Cooperative Management Platform"
license = "MIT"
authors = ["CoopData Team"]

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "timeout", "limit", "compression-br", "compression-gzip"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"

sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1"

utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }

anyhow = "1"
thiserror = "1"
dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

config = "0.14"
once_cell = "1"

redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

async-trait = "0.1"
urlencoding = "2"

[features]
test-utils = []

[dev-dependencies]
tokio-test = "0.4"
serde_test = "1"
tower = { version = "0.5", features = ["util"] }
coop-data-backend = { path = ".", features = ["test-utils"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
